made starter Post flow
TODO image uploads
