# server/app.js
@@ -4,7 +4,7 @@ const passport = require('passport');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 const errorHandlers = require('./helpers/errorHandlers');
-const testRoutes = require('./routes/testRoutes');
+const postRoutes = require('./routes/postRoutes');
 const authRoutes = require('./routes/authRoutes');
 const userRoutes = require('./routes/userRoutes');
 
@@ -31,7 +31,7 @@ app.use(passport.session());
 
 // After allllll that above middleware, we finally handle our own routes!
 app.use('/api/v1/auth', authRoutes);
-app.use('/api/v1/test', testRoutes);
+app.use('/api/v1/posts', postRoutes);
 app.use('/api/v1/user', userRoutes);
 
 // If that above routes didnt work, we 404 them and forward to error handler
